231003 Api Gateway의 httpMethod, rest에 따라 분기 기본 코드 작성.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ logging:
   level:
     org:springframework.cloud.function: DEBUG
 
-spring:
-  cloud:
-    function:
-      definition: index1
+#spring:
+#  cloud:
+#    function:
+#      definition: router
